resources/skins.ubuntu.styles/ubuntu-custom.css
/* ... */
div.ubuntu-template-message>p>span[typeof="mw:File"] {
	display: block;
	position: absolute;
	top: 0.5em;
}

div.ubuntu-template-message>p>span[typeof="mw:File"]:first-of-type {
	left: 13px;
}

div.ubuntu-template-message>div {
	font-size: 90%;
}

/* Related articles templates */

div.ubuntu-template-meta-related-articles {
	float: right;
	clear: right;
	width: 25%;
	margin: 0 0 0.5em 0.5em;
}

div.ubuntu-template-meta-related-articles>p {
	background: #333;
	color: white;
	padding: 0.2em;
	border-bottom: 5px #08c solid;
	margin: 0;
	text-align: center;
	font-weight: bold;
}

div.ubuntu-template-meta-related-articles>ul {
	list-style-type: none;
	list-style-image: none;
	margin: 0;
	padding: 0.3em;
}

div.ubuntu-template-meta-related-articles>ul>li {
	padding: 0.4em 0;
	line-height: 1;
}

@media screen and (min-width: 721px) {
	.client-darkmode div.ubuntu-template-meta-related-articles>p {
		background: #ccc;
		color: black;
	}
}

/* Responsive Related Articles */

@media screen and (max-width: 720px) {
	div.ubuntu-template-meta-related-articles {
		float: initial;
		clear: initial;
		width: initial;
		border: 1px solid var(--border-color-base, #a2a9b1);
		background-color: var(--background-color-neutral-subtle, #f8f9fa);
		padding: 5px;
		margin: 1em 0;
		margin-top: 0;
		clear: both;
	}

	div.ubuntu-template-meta-related-articles>p {
		background: initial;
		color: var(--text-color);
		padding: 0;
		border: none;
		margin: 0;
		text-align: left;
		font-weight: normal;
		display: inline;
	}

	div.ubuntu-template-meta-related-articles>p::after {
		content: ":";
	}

	div.ubuntu-template-meta-related-articles>ul {
		margin: 0;
		padding: 0;
		display: inline;
	}

	div.ubuntu-template-meta-related-articles>ul>li {
		padding: 0;
		line-height: initial;
		display: inline;
		white-space: nowrap;
		padding: 0 0.5em;
		border-left: 1px solid #a2a9b1;
	}

	div.ubuntu-template-meta-related-articles>ul>li:first-child {
		padding-left: 0.25em;
		border-left: 0;
	}

	div.ubuntu-template-meta-related-articles>ul>li a {
		font-weight: normal !important;
	}
}

/* Hardware table */
@media (min-width: 721px) {
	.ubuntu-table-laptop {
		float: right;
		margin-left: 1em;
	}
}

/* Main Page columns */
@media screen and (min-width: 721px) {
	div.ubuntu-main-page-columns {
		column-count: 2;
	}

	div.ubuntu-main-page-columns>* {
		page-break-inside: avoid;
		display: inline-block;
		width: 100%;
	}
}

/* Syntax highlighting */
#content .CodeMirror pre {
	line-height: 1.5em;
}

#content pre.cm-mw-section-1,
#content pre.cm-mw-section-2 {
	line-height: 1.5em;
	font-size: inherit;
	font-weight: bold;
}

#content .cm-mw-pagename {
	text-decoration: unset;
}

/* DarkMode Extension Workaround */
@media screen {
	html.client-darkmode {
		background-color: var(--ubuntu-body-background-color, #f6f9fc);
	}
}

@font-face {
	font-family: 'Ubuntu Sans';
}

/* Timeless Skin Fix */
@media screen {
	dd {
		margin-left: 1.6em;
	}
}

/* Dark grey background for the entire header */
.vector-header-container {
	background-color: #333;
	gap: 0 !important;
	--vector-icon-custom-color: #ffffff;
	color: #ffffff;
}

.vector-header-container .cdx-button--weight-quiet:hover,
.vector-header-container .cdx-button--fake-button--enabled:hover,
.vector-header-container .vector-dropdown-label:hover,
.vector-header-container input:hover + .cdx-button--weight-quiet {
	--background-color-button-quiet-hover: transparent;
	--background-color-interactive: transparent;
	background-color: rgba(255, 255, 255, 0.15) !important;
}

.vector-header-container a,
.vector-header-container a:visited {
	color: #ffffff !important;
}

.vector-sticky-header-container {
	color: var( --color-base, #202122 ) !important;
	--vector-icon-custom-color: var( --color-base, #202122 );
}

/* Dropdown panels have their own backgrounds; reset inherited header white */
.vector-dropdown-content
.vector-dropdown-content .vector-menu-heading,
.cdx-menu,
.cdx-menu-item,
.cdx-typeahead-search .cdx-menu-item__text,
.vector-pinnable-header {
	color: var( --color-base, #202122 ) !important;
}

/*Colour area around header container*/
.vector-header {
	background-color: #333 !important;
	padding-top: 0;
	padding-bottom: 0;
}

/* Ensure all header sections have consistent height and styling */
.vector-header-start,
.vector-header-end {
	background-color: #333 !important;
	min-height: 50px !important;
	display: flex !important;
	align-items: center !important;
	margin: 0 !important;
	padding-top: 0 !important;
	padding-bottom: 0 !important;
	border: none !important;
}

/* Fix logo area for rectangular (tall) logo - reduced padding */
.vector-header-start .vector-logo {
	display: flex !important;
	padding: 0 12px !important;
}



/* Align icon to top, text to bottom, matching ubuntu.com tagged-logo layout */
.vector-header-start {
	align-items: start !important;
}

.vector-header-start .vector-logo {
	align-items: stretch !important;
	height: 50px !important;
}

.vector-header-start a.mw-logo {
	align-items: flex-end !important;
}

/* Wiki title styles */
.vector-header-start .mw-logo-wordmark {
	font-size: 1.3rem !important;
	font-weight: 300 !important;
	line-height: 1rem !important;
	margin-bottom: 0.25rem !important;
	white-space: nowrap !important;
}

.vector-header-start .mw-logo {
	display: flex;
	gap: 0.25rem;
}

.vector-header-start .mw-logo-container {
	float: none;
	max-width: none;
}

/* Style the logo image */
.mw-logo-icon {
	float: none;
	max-height: 42px;
	width: auto;
	margin: 0;
}

/* Make ends of sticky header same colour as background */
.vector-sticky-header-container {
	background-color: var(--background-color-neutral-subtle) !important;
}

/* Username and dropdown text */
.vector-dropdown-content a,
.vector-user-menu .vector-menu-content a {
	color: var(--ubuntu-menu-text-color) !important;
}
/* ... */

